test: expand backend coverage for auth, security, filters, and service flows