@@ -1,52 +1,48 @@
 package com.digitalcafe.security;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.Authentication;
 import org.springframework.security.core.userdetails.User;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.test.util.ReflectionTestUtils;
 
-import java.util.List;
+import java.util.Collections;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 class JwtUtilTest {
 
-    private JwtUtil jwtUtil;
-
-    @BeforeEach
-    void setUp() {
-        jwtUtil = new JwtUtil();
+    @Test
+    void shouldValidateGeneratedToken() {
+        JwtUtil jwtUtil = new JwtUtil();
         ReflectionTestUtils.setField(jwtUtil, "secret", "0123456789abcdef0123456789abcdef");
-        ReflectionTestUtils.setField(jwtUtil, "expiration", 3_600_000L);
-        ReflectionTestUtils.setField(jwtUtil, "refreshExpiration", 86_400_000L);
-        ReflectionTestUtils.invokeMethod(jwtUtil, "validateSecret");
-    }
+        ReflectionTestUtils.setField(jwtUtil, "expiration", 60000L);
+        ReflectionTestUtils.setField(jwtUtil, "refreshExpiration", 120000L);
 
-    @Test
-    void shouldGenerateAndValidateAccessToken() {
-        User principal = new User(
-                "customer@test.com",
-                "pwd",
-                List.of(new SimpleGrantedAuthority("ROLE_CUSTOMER"))
-        );
-        var auth = new UsernamePasswordAuthenticationToken(principal, null, principal.getAuthorities());
+        UserDetails userDetails = new User("customer@test.com", "pass", Collections.emptyList());
+        Authentication authentication = new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
 
-        String token = jwtUtil.generateToken(auth);
+        String token = jwtUtil.generateToken(authentication);
 
-        assertThat(token).isNotBlank();
+        assertThat(jwtUtil.validateToken(token)).isTrue();
+        assertThat(jwtUtil.validateToken(token, userDetails)).isTrue();
         assertThat(jwtUtil.extractUsername(token)).isEqualTo("customer@test.com");
-        assertThat(jwtUtil.validateToken(token, principal)).isTrue();
     }
 
     @Test
-    void shouldRejectShortSecretDuringValidation() {
-        JwtUtil invalidUtil = new JwtUtil();
-        ReflectionTestUtils.setField(invalidUtil, "secret", "short-secret");
+    void shouldRejectExpiredToken() {
+        JwtUtil jwtUtil = new JwtUtil();
+        ReflectionTestUtils.setField(jwtUtil, "secret", "0123456789abcdef0123456789abcdef");
+        ReflectionTestUtils.setField(jwtUtil, "expiration", -1000L);
+        ReflectionTestUtils.setField(jwtUtil, "refreshExpiration", -1000L);
 
-        assertThatThrownBy(() -> ReflectionTestUtils.invokeMethod(invalidUtil, "validateSecret"))
-                .hasMessageContaining("jwt.secret must be at least 32 bytes");
+        UserDetails userDetails = new User("customer@test.com", "pass", Collections.emptyList());
+        Authentication authentication = new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
+
+        String token = jwtUtil.generateToken(authentication);
+
+        assertThat(jwtUtil.validateToken(token)).isFalse();
+        assertThat(jwtUtil.validateToken(token, userDetails)).isFalse();
     }
 }
